# vulkanscenegraph-feedstock

./: README.md  conda-forge.yml  pixi.toml
.ci_support/: linux_64_.yaml  linux_aarch64_.yaml  linux_ppc64le_.yaml  osx_64_.yaml  osx_arm64_.yaml  win_64_.yaml
recipe/: meta.yaml  recipe.yaml  run_test.bat  run_test.sh
recipe/patches/: ignore-vulkan-version.patch  remove-vsg-declspec-from-templates.patch
recipe/tests/: CMakeLists.txt  main.cpp
